src/test/good/variable.jb
int main() {
	int x = 1;
	print(int_to_string(x));

	string y = "a";
	print(y);

	bool z = true;
	print(bool_to_string(z));
}
