src/test/bad/out_of_bounds1.jb
int main() {
	[int] arr = [1];
	print(arr[1]);
}
